--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,16 +24,16 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-    username: xxf
-    password: 123456
+    username: guest
+    password: guest
     cache:
       channel:
         size: 8
 
 # redis
-#  redis:
+  redis:
 #    host: localhost
-#    password:
+    password: 123456
 #    port: 6379
 
 # Server settings (ServerProperties)
