--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,9 +18,22 @@ spring:
       channel:
         size: 8
 
-# redis
+  # dubbo
+  dubbo:
+    application:
+      name: demo-consumer
+    base-package: com.example.demo.service  # dubbo服务调用者所在的包
+    registry:
+      address: 127.0.0.1                    # zookeeper注册中心的地址
+      port: 2181                            # zookeeper注册中心的端口
+    consumer:
+      timeout: 1000
+      check: true                           # 服务启动时检查被调用服务是否可用
+      retries: 2                            # 服务调用重试次数
+
+  # redis
   redis:
-#    host: localhost
+    #    host: localhost
     password: 123456
 #    port: 6379
 
