--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -49,7 +49,7 @@ server:
 
 log:
   level: INFO
-  path: D:/logs/springboot_demo
+  path: E:/logs/springboot_demo
 
 cors:
   allowedOrigins: 'http://192.168.1.116:8088'
