--- a/pom.xml
+++ b/pom.xml
@@ -105,29 +105,29 @@
 
         <!-- dubbo -->
         <!--<dependency>-->
-            <!--<groupId>com.alibaba.spring.boot</groupId>-->
-            <!--<artifactId>dubbo-spring-boot-starter</artifactId>-->
-            <!--<version>2.0.0</version>-->
+        <!--<groupId>com.alibaba.spring.boot</groupId>-->
+        <!--<artifactId>dubbo-spring-boot-starter</artifactId>-->
+        <!--<version>2.0.0</version>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>org.apache.zookeeper</groupId>-->
-            <!--<artifactId>zookeeper</artifactId>-->
-            <!--<version>3.4.6</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.slf4j</groupId>-->
-                    <!--<artifactId>slf4j-log4j12</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>log4j</groupId>-->
-                    <!--<artifactId>log4j</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
+        <!--<groupId>org.apache.zookeeper</groupId>-->
+        <!--<artifactId>zookeeper</artifactId>-->
+        <!--<version>3.4.6</version>-->
+        <!--<exclusions>-->
+        <!--<exclusion>-->
+        <!--<groupId>org.slf4j</groupId>-->
+        <!--<artifactId>slf4j-log4j12</artifactId>-->
+        <!--</exclusion>-->
+        <!--<exclusion>-->
+        <!--<groupId>log4j</groupId>-->
+        <!--<artifactId>log4j</artifactId>-->
+        <!--</exclusion>-->
+        <!--</exclusions>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>com.github.sgroschupf</groupId>-->
-            <!--<artifactId>zkclient</artifactId>-->
-            <!--<version>0.1</version>-->
+        <!--<groupId>com.github.sgroschupf</groupId>-->
+        <!--<artifactId>zkclient</artifactId>-->
+        <!--<version>0.1</version>-->
         <!--</dependency>-->
 
         <dependency>
@@ -136,10 +136,16 @@
             <version>2.5</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>com.fly</groupId>-->
-            <!--<artifactId>api</artifactId>-->
-            <!--<version>1.0.0</version>-->
+        <!--<groupId>com.fly</groupId>-->
+        <!--<artifactId>api</artifactId>-->
+        <!--<version>1.0.0</version>-->
         <!--</dependency>-->
+
+        <dependency>
+            <groupId>com.springstudy</groupId>
+            <artifactId>spring-boot-starter-hello</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
