--- a/pom.xml
+++ b/pom.xml
@@ -126,11 +126,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-cache</artifactId>
-        </dependency>
-
 
         <!-- dubbo -->
         <!--<dependency>-->
@@ -170,11 +165,11 @@
         <!--<version>1.0.0</version>-->
         <!--</dependency>-->
 
-        <!--        <dependency>-->
-        <!--            <groupId>com.springstudy</groupId>-->
-        <!--            <artifactId>spring-boot-starter-hello</artifactId>-->
-        <!--            <version>1.0-SNAPSHOT</version>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>com.springstudy</groupId>
+            <artifactId>spring-boot-starter-hello</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
