--- a/pom.xml
+++ b/pom.xml
@@ -165,11 +165,11 @@
         <!--<version>1.0.0</version>-->
         <!--</dependency>-->
 
-        <dependency>
-            <groupId>com.springstudy</groupId>
-            <artifactId>spring-boot-starter-hello</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.springstudy</groupId>-->
+<!--            <artifactId>spring-boot-starter-hello</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
