--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,32 +13,32 @@ spring:
       maxRequestSize: 200MB
 
   # rabbitmq
-  application:
-    name: springboot-rabbitmq
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-    cache:
-      channel:
-        size: 8
+#  application:
+#    name: springboot-rabbitmq
+#  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    username: guest
+#    password: guest
+#    cache:
+#      channel:
+#        size: 8
 
   #Dubbo 配置
-  dubbo:
-    application:
-      id: springboot_demo
-      name: springboot_demo
-    registry:
-      address: zookeeper://127.0.0.1:2181
-    protocol:
-      name: dubbo
-      port: 20800
+#  dubbo:
+#    application:
+#      id: springboot_demo
+#      name: springboot_demo
+#    registry:
+#      address: zookeeper://127.0.0.1:2181
+#    protocol:
+#      name: dubbo
+#      port: 20800
 
   # redis
-  redis:
+#  redis:
     #    host: localhost
-    password: 123456
+#    password: 123456
 #    port: 6379
 
 # Server settings (ServerProperties)
@@ -49,7 +49,7 @@ server:
 
 log:
   level: INFO
-  path: E:/logs/springboot_demo
+  path: C:/logs/springboot_demo
 
 cors:
   allowedOrigins: 'http://192.168.1.116:8088'
