--- a/pom.xml
+++ b/pom.xml
@@ -165,11 +165,26 @@
         <!--<version>1.0.0</version>-->
         <!--</dependency>-->
 
-<!--        <dependency>-->
-<!--            <groupId>com.springstudy</groupId>-->
-<!--            <artifactId>spring-boot-starter-hello</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.springstudy</groupId>-->
+        <!--            <artifactId>spring-boot-starter-hello</artifactId>-->
+        <!--            <version>1.0-SNAPSHOT</version>-->
+        <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
